# chat-api

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: chat.py
app/domain/: models.py
app/repositories/: base.py  memory.py
app/schemas/: chat.py
app/services/: chat_service.py
tests/: test_chat_api.py
